# mangas-scrappers-python

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS  README.md  SECURITY.md  pyproject.toml
.specify/: init-options.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-chapter-image-fetcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chapter-image-fetcher/checklists/: requirements.md
specs/001-chapter-image-fetcher/contracts/: cli-contract.md
specs/002-batch-url-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-batch-url-extract/checklists/: requirements.md
specs/002-batch-url-extract/contracts/: extract-batch-file.md
specs/003-extract-title-chapters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-extract-title-chapters/checklists/: requirements.md
specs/003-extract-title-chapters/contracts/: cli-commands.md
src/cli/: main.py
src/lib/: html_parser.py  http_client.py  text.py
src/scrapers/: extractor.py  models.py
src/scrapers/adapters/: __init__.py  base.py  generic.py  mangadex.py
src/services/: image_downloader.py  path_builder.py  result_formatter.py
