[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mangas-scrappers"
version = "0.1.0"
description = "CLI to extract manga chapter images from public chapter URLs"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "selectolax>=0.3.24",
  "typer>=0.12.3",
]

[project.scripts]
manga-fetch = "src.cli.main:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
